--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile group: 'commons-net', name: 'commons-net', version: '3.3'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     compile group: 'com.jcraft', name: 'jsch', version: '0.1.53'
+    compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.6.4'
 }
 
 test {
