--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'commons-net', name: 'commons-net', version: '3.3'
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'com.jcraft', name: 'jsch', version: '0.1.53'
     compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.6.4'
+    compile "com.beust:jcommander:1.48"
 }
 
 test {
