--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ dependencies {
     compile group: 'commons-net', name: 'commons-net', version: '3.3'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'com.jcraft', name: 'jsch', version: '0.1.53'
-    compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.6.4'
+    compile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.5'
+    compile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.5'
     compile "com.beust:jcommander:1.48"
 }
 
