--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-beaconaccount:
+downloader:
   restart: always
   build: .
-  container_name: container.beacon.account
-  hostname: docker.beacon.account
-  command: java -jar beacon-account-manager.jar api.dev.systemstatus.int.thomsonreuters.com 27017 etap webproxy.sng.corp.services
+  container_name: container.agoda.downloader
+  hostname: docker.agoda.downloader
+  command: java -jar agoda-downloader.jar --sources "https://static.pexels.com/photos/3247/nature-forest-industry-rails.jpg" --out "/Users/worasitdaimongkol/xxx" --ftpUser "agoda" --ftpPassword "1234" --sftpUser "agoda" --sftpPassword "1234"
